--- a/index.html
+++ b/index.html
@@ -61,23 +61,25 @@
 
     <main>
       <section class="hero">
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <h1 class="main-header">Effective Solutions for Your Business</h1>
+        <button class="hero-button" type="button">Order Service</button>
       </section>
 
-      <section>
-        <h2>Our Features</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <!-- Features -->
+
+      <section class="hero-second">
+        <h2 class="second-header">Our Features</h2>
+        <ul class="feature-list">
+          <li class="feature-item">
+            <h3 class="third-header">Strategy</h3>
+            <p class="descr">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="feature-item">
+            <h3 class="third-header">Punctuality</h3>
+            <p class="descr">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
@@ -89,9 +91,9 @@
               opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="feature-item">
+            <h3 class="third-header">Technologies</h3>
+            <p class="descr">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -99,70 +101,121 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
-            <img src="./images/img.jpg" alt="man-with-beard" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/img-1.jpg" alt="smiling-man" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/img-2.jpg" alt="girl" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
+      <!-- Team -->
+
+      <section class="hero-third">
+        <h2 class="second-header">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-item">
             <img
+              class="team-src"
+              src="./images/img.jpg"
+              alt="man-with-beard"
+              width="264"
+            />
+            <h3 class="third-header">Mark Guerrero</h3>
+            <p class="descr">Product Designer</p>
+          </li>
+          <li class="team-item">
+            <img
+              class="team-src"
+              src="./images/img-1.jpg"
+              alt="smiling-man"
+              width="264"
+            />
+            <h3 class="third-header">Tom Ford</h3>
+            <p class="descr">Frontend Developer</p>
+          </li>
+          <li class="team-item">
+            <img
+              class="team-src"
+              src="./images/img-2.jpg"
+              alt="girl"
+              width="264"
+            />
+            <h3 class="third-header">Camila Garcia</h3>
+            <p class="descr">Marketing</p>
+          </li>
+          <li class="team-item">
+            <img
+              class="team-src"
               src="./images/img-3.jpg"
               alt="man-in-grey-T-shirt"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="third-header">Daniel Wilson</h3>
+            <p class="descr">UI Designer</p>
           </li>
         </ul>
+      </section>
 
-        <!--Portfolio-->
-        <h2 class="title">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img src="./images/img-banking.jpg" alt="app-icons" width="360" />
-            <h3 class="subtitle">Banking App</h3>
+      <!--Portfolio-->
+      <section class="fourht-section">
+        <h2 class="second-header">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
+            <img
+              class="portfolio-src"
+              src="./images/img-banking.jpg"
+              alt="app-icons"
+              width="360"
+            />
+            <h3 class="third-header">Banking App</h3>
             <p class="descr">App</p>
           </li>
-          <li>
+
+          <li class="portfolio-item">
             <img
+              class="portfolio-src"
               src="./images/img-cashless.jpg"
               alt="payment-via-cash-terminal"
               width="360"
             />
-            <h3 class="subtitle">Cashless Payment</h3>
+            <h3 class="third-header">Cashless Payment</h3>
             <p class="descr">Marketing</p>
           </li>
-          <li>
-            <img src="./images/img-meditation.jpg" alt="laptop" width="360" />
-            <h3 class="subtitle">Meditation App</h3>
+
+          <li class="portfolio-item">
+            <img
+              class="portfolio-src"
+              src="./images/img-meditation.jpg"
+              alt="laptop"
+              width="360"
+            />
+            <h3 class="third-header">Meditation App</h3>
             <p class="descr">App</p>
           </li>
-          <li>
-            <img src="./images/img-taxi.jpg" alt="car" width="360" />
-            <h3 class="subtitle">Taxi Service</h3>
+
+          <li class="portfolio-item">
+            <img
+              class="portfolio-src"
+              src="./images/img-taxi.jpg"
+              alt="car"
+              width="360"
+            />
+            <h3 class="third-header">Taxi Service</h3>
             <p class="descr">Marketing</p>
           </li>
-          <li>
-            <img src="./images/img-screen.jpg" alt="phone-screen" width="360" />
-            <h3 class="subtitle">Screen Illustrations</h3>
+
+          <li class="portfolio-item">
+            <img
+              class="portfolio-src"
+              src="./images/img-screen.jpg"
+              alt="phone-screen"
+              width="360"
+            />
+            <h3 class="third-header">Screen Illustrations</h3>
             <p class="descr">Design</p>
           </li>
-          <li>
-            <img src="./images/img-online.jpg" alt="girl" width="360" />
-            <h3 class="subtitle">Online Courses</h3>
+
+          <li class="portfolio-item">
+            <img
+              class="portfolio-src"
+              src="./images/img-online.jpg"
+              alt="girl"
+              width="360"
+            />
+            <h3 class="third-header">Online Courses</h3>
             <p class="descr">Marketing</p>
           </li>
         </ul>
@@ -171,11 +224,15 @@
 
     <!--Footer-->
     <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <section class="footer-hero">
+        <a class="logo logo-footer" href="./index.html"
+          >Web<span class="logo-part">Studio</span></a
+        >
+        <p class="descr">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </section>
     </footer>
   </body>
 </html>
