--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <li class="nav-item">
             <a class="nav-link" href="./index.html">Studio</a>
           </li>
-          <li class="nav-list">
+          <li class="nav-item">
             <a class="nav-link" href="">Portfolio</a>
           </li>
           <li class="nav-item">
@@ -84,7 +84,7 @@
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="feature-item">
             <h3>Diligence</h3>
             <p>
               Research and confirm brands with the strongest digital growth
@@ -116,6 +116,7 @@
             <h3 class="third-header">Mark Guerrero</h3>
             <p class="descr">Product Designer</p>
           </li>
+
           <li class="team-item">
             <img
               class="team-src"
@@ -223,16 +224,14 @@
     </main>
 
     <!--Footer-->
-    <footer>
-      <section class="footer-hero">
-        <a class="logo logo-footer" href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
-        >
-        <p class="descr">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </section>
+    <footer class="footer-hero">
+      <a class="logo logo-footer" href="./index.html"
+        >Web<span class="logo-part">Studio</span></a
+      >
+      <p class="descr">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
