--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
             </p>
           </li>
           <li class="feature-item">
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="third-header">Diligence</h3>
+            <p class="descr">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
