--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
       <!-- Team -->
 
-      <section class="hero-third">
+      <section class="team-section">
         <h2 class="second-header">Our Team</h2>
         <ul class="team-list">
           <li class="team-item">
@@ -151,7 +151,7 @@
       </section>
 
       <!--Portfolio-->
-      <section class="fourht-section">
+      <section class="portfolio-section">
         <h2 class="second-header">Our Portfolio</h2>
         <ul class="portfolio-list">
           <li class="portfolio-item">
